# FileXplorerInstaller

./: .gitattributes  .gitignore  CMakeLists.txt  main.cpp  readme.md
resources/: images.qrc
resources/Translate/: FileXplorerInstaller_zh_CN.ts
src/: FileXplorerInstaller.cpp  FileXplorerInstaller.h
